--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
 }
 
 h1 {
-    color: white;
-    background-color: rgb(57, 71, 82);
+    color: rgb(47, 60, 70);
+    background-color: rgb(255, 164, 115);
     text-align: center;
 }
 
@@ -30,6 +30,7 @@ li {
     margin: 0 10px;
     width: 50px;
     height: 50px;
+    filter: invert(80%) sepia(25%) saturate(1300%) hue-rotate(315deg);
 }
 
 #profile {
@@ -41,17 +42,19 @@ li {
 }
 
 #mail:link {
+    /* color: rgb(255, 188, 152); */
     color: white;
 }
 
 #mail:visited {
+    /* color: rgb(255, 188, 152); */
     color: white;
 }
 
 #mail:hover {
-    color: rgb(208, 208, 208);
+    color: rgb(255, 210, 186);
 }
 
 #mail:active {
-    color: rgb(160, 160, 160);
+    color: rgb(255, 171, 126);
 }
