--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ h1 {
     color: rgb(47, 60, 70);
     background-color: rgb(255, 164, 115);
     text-align: center;
+    padding: 0 5px 0 5px;
 }
 
 p {
@@ -39,6 +40,11 @@ li {
     margin-right: auto;
     width: 200px;
     height: 200px;
+}
+
+#facts {
+    background-color:rgb(50, 81, 102);
+    padding: 0 5px 0 5px;
 }
 
 #mail:link {
