--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-    background-color: rgb(47, 60, 70);
+    /* background-color: rgb(47, 60, 70); */
+    background: linear-gradient(rgb(59, 76, 88), rgb(28, 36, 43));
     font-family: 'Courier New', Courier, monospace;
     margin: 5vh;
     width: 90vw;
@@ -53,7 +54,6 @@ li {
 }
 
 #mail:visited {
-    /* color: rgb(255, 188, 152); */
     color: white;
 }
 
