--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
-body {
-    /* background-color: rgb(47, 60, 70); */
+html {
     background: linear-gradient(rgb(59, 76, 88), rgb(28, 36, 43));
+    background-attachment: fixed;
+    background-size: 100vw 100vh;
+}
+
+body {
     font-family: 'Courier New', Courier, monospace;
     margin: auto;
-    height: 100vh;
     width: 90vw;
     max-width: 43em;
     margin-left: auto;
@@ -25,7 +28,7 @@ p {
 
 li {
     color:  white;
-    line-height: 1.5em
+    line-height: 1.5em;
 }
 
 .social-media {
@@ -40,8 +43,8 @@ li {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 200px;
-    height: 200px;
+    width: 170px;
+    height: 170px;
 }
 
 #facts {
