--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     font-family: 'Courier New', Courier, monospace;
     margin: auto;
     width: 90vw;
-    max-width: 43em;
+    max-width: 31em;
     margin-left: auto;
     margin-right: auto;
 }
@@ -25,11 +25,13 @@ p {
     color:  white;
     text-align: justify;
     line-height: 1.75em;
+    font-size: 0.9em;
 }
 
 li {
     color:  white;
     line-height: 1.75em;
+    font-size: 0.9em;
 }
 
 .social-media {
