--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ p {
 }
 
 li {
-    color:  white;
+    
+    color: rgb(203, 232, 255);
     line-height: 1.75em;
     font-size: 0.9em;
 }
@@ -40,6 +41,10 @@ li {
     width: 40px;
     height: 40px;
     filter: invert(80%) sepia(25%) saturate(1300%) hue-rotate(315deg);
+}
+
+.text-highlight {
+    color:  white;
 }
 
 #profile {
